# adsb_actions

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIG_INSTRUCTIONS.yaml  GALLERY.md  GETTING_STARTED.md  LICENSE  QUICK_AIRPORT_SETUP.md  README.md  RULE_SCHEMA.yaml  SPATIAL_GRID_OPTIMIZATION.md  callbacks.py  config.yaml  flight.py  main.py  private.yaml.example  pyproject.toml  pytest.ini  requirements.txt  rules.py  stats.py
airport_lists/: aircarrier_top_400.txt  all_ga.txt  all_towered_airports_ourairports.txt  allairports_10kplus.txt  busy_ga_all.txt  ga_untowered_25kplus.txt  manual_request_airports.txt  manual_request_airports_noisy.txt  site_manifest.yaml  sitelist-quiet.txt  sitelist.txt  towered_busiest_noisy.txt  towered_busiest_quiet.txt  towered_busiest_supernoisy.txt  untowered_quiet.txt  untowered_top160.txt  untowered_top500.txt  untowered_top500_all.txt
cloudflare-worker/src/: index.js
examples/: README.md  busiest_nontowered.txt  busiest_nontowered_and_local.txt  busy_bayarea_midair.txt  emergency_squawk_alert.yaml  hello_world_api.yaml  hello_world_csv.yaml  hello_world_rules.yaml  low_altitude_alert.yaml  low_altitude_callbacks.py  military_alert.yaml  print_csv.yaml  tcp_api_webhook.yaml
examples/88nv/: README.md  airport_monitor_api_rules.yaml  airport_monitor_rules.yaml  brc_db_logic.py  detect_ops_from_files.yaml  flight_info_display_config.yaml  monitor_sjc.yaml  (+7 more)
html/: accessibility.html  contact.html  faq.html  index_template.html  methodology.html  unavailable_template.html
tests/: 1hr.json  20minutes.json  brc_large_regions.kml  brc_pusher_gates.kml  conftest.py  manual_test_traffic_cloud.md  oak_area.kml  sjc.kml  test1.kml  test_1hr.py  test_additional_conditions.py  test_airport_quickstart.py  test_altitudes.py  test_batch_los_pipeline.py  test_busyness.py  test_category_persistence.py  test_changed_regions.py  test_cooldown.py  test_data_quality.py  test_enabled.py  test_generate_airport_config.py  test_generic_los_analyzer.py  test_geo_helpers.py  test_hello_world_monitor.py  test_icao_convert.py  test_latlong.py  test_load.py  test_los_animator.py  test_los_quality.py  test_main.py  test_north_berkeley.kml  test_note.py  test_pipeline_airport_quality.py  test_pipeline_config.py  test_pipeline_e2e.py  test_pipeline_gate.py  test_pipeline_provenance.py  test_print_csv.py  test_prox.py  test_pusher.py  (+17 more)
(+233 files in other folders)
