[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/adsb_actions",
    "src/core",
    "src/tools",
    "src/applications",
]

[project]
name = "adsb_actions"
version = "0.0.7"
authors = [
  { name="Paul Eastham", email="eastham@gmail.com" },
]
description = "A package for taking actions based on ADS-B data"
readme = "README.md"
# <3.13: numpy/scipy lack aarch64 wheels for 3.13 (affects Raspberry Pi 5 64-bit)
requires-python = ">=3.8,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML >= 6.0.1",
    "icao-nnumber-converter-us >= 0.1.0",
    "geopy >= 2.4.1",
    "lxml >= 4.9.4",
    "fastkml >= 1.4.0",
    "requests >= 2.31.0",
    "prometheus_client >= 0.20.0",
    "pytest >= 8.1.1",
]

[project.optional-dependencies]
gui = [
    "Kivy == 2.3.0",
    "kivymd == 1.1.1",
]
analysis = [
    "folium >= 0.20.0",
    "numpy >= 2.3.1",
    "scipy >= 1.11.0",
]
all = [
    "Kivy == 2.3.0",
    "kivymd == 1.1.1",
    "folium >= 0.20.0",
    "numpy >= 2.3.1",
    "scipy >= 1.11.0",
]

[project.urls]
Homepage = "https://github.com/eastham/adsb_actions"
Issues = "https://github.com/eastham/adsb_actions/issues"
